tests/pass/global_chain.tc
int seed = 2;
int next = seed + 3;
int final_value = next * 2;

int main() {
  return final_value;
}
