tests/fail/function_global_conflict.tc
int value = 1;

int value() {
  return 2;
}

int main() {
  return value;
}
